refactor: complete manual extraction for remaining 7 oversized skills
Manual extraction by subagents for skills the automated script couldn't
fully handle. All 7 now well under 500 lines:

- docker-optimize: 808 → 186 lines (8 new reference files)
- iac-deploy: 741 → 177 lines (6 new reference files)
- branching: 647 → 206 lines (6 new reference files)
- git-worktrees: 661 → 213 lines (6 new reference files)
- batch: 611 → 197 lines (5 new reference files, fixed UTF-8 encoding)
- ci-cd-setup: 584 → 110 lines (already done in prior batch)
- monitoring-setup: 506 → 417 lines (1 new reference file)

Validation: 0 errors, 0 warnings (down from 58 warnings + 2 errors).
Tests: 555 passed.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>